# vcastle

./: .gitignore  Cargo.toml
src/youtube_data/: mod.rs
src/youtube_data/search/: mod.rs
vcastle/: Cargo.toml
vcastle/src/: error.rs  main.rs
youtube_data/: Cargo.toml
youtube_data/src/: channels.rs  error.rs  handler.rs  lib.rs  model.rs  search.rs  videos.rs
youtube_data/src/channels/: mod.rs  model.rs
youtube_data/src/search/: mod.rs  model.rs
youtube_data/src/videos/: mod.rs  model.rs
