[package]
name = "vcastle"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
# 
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3" }
#
tokio = { version = "1", features = ["full"] }
#
dotenv = { version = "0.15" }
tracing = { version = "0.1" }
tracing-core = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }

[dependencies.youtube_data]
path = "../youtube_data"
