[package]
name = "youtube_data"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
#
reqwest = { version = "0.11", features = ["json"] }
http = { version = "1" }
http-serde = { version = "2" }
#
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1" }
#
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }

[dev-dependencies]
dotenv = { version = "0.15" }
